manifests/apis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passenger-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: passenger-api
  template:
    metadata:
      labels:
        app: passenger-api
    spec:
      containers:
      - name: container-passenger-api
        image: nginx 
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trip-api
  template:
    metadata:
      labels:
        app: trip-api
    spec:
      containers:
      - name: container-trip-api
        image: nginx 
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver-api
  template:
    metadata:
      labels:
        app: driver-api
    spec:
      containers:
      - name: container-driver-api
        image: nginx 
        ports:
        - containerPort: 80
