manifests/apis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - http:
      paths:
      - path: /passenger
        pathType: Prefix
        backend:
          service:
            name: passenger-api-nodeport
            port:
              number: 80
      - path: /trip
        pathType: Prefix
        backend:
          service:
            name: trip-api-nodeport
            port:
              number: 80
      - path: /driver
        pathType: Prefix
        backend:
          service:
            name: driver-api-nodeport
            port:
              number: 80
